moved location hud to stop overlapping armor hud

--- a/assets/style.css
+++ b/assets/style.css
@@ -271,7 +271,7 @@ body.main-menu-visible .ped-hud {
 .location-hud {
   position: absolute;
   right: 25px;
-  bottom: calc(135px + 1em);
+  top: 80px;
   font-size: 0.75em;
   background-color: rgba(0, 0, 0, 0.25);
   padding: 4px;
